--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,10 @@ hpack==4.0.0
 Hypercorn==0.16.0
 hyperframe==6.0.1
 idna==3.7
-jwt==1.3.1
 priority==2.0.0
 pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
-PyJWT==2.8.0
 pymongo==4.7.0
 python-config==0.1.2
 python-decouple==3.8
@@ -33,3 +31,5 @@ uvicorn==0.29.0
 wsproto==1.2.0
 python-dotenv==1.0.1
 gunicorn==22.0.0
+python-jwt 
+pyjwt[crypto]
