--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.4'
 services:
   fastapi:
-    image: test-1.0
+    image: kaluiklui3011/test-1.0
     build:
       context: .
       dockerfile: ./Dockerfile
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     ports:
-      - 8000:8000
+      - 8000 
     environment:
-      - MONGO_URI=mongodb+srv://innedhelp123456:25Jg8gtjyCfh61jq@test.w5z7ngz.mongodb.net/?retryWrites=true&w=majority&appName=Test
       - secret=2668fc01978a735803b1643ae8cfd70b
       - algorithm=HS256
+      - MONGO_URI=mongodb+srv://innedhelp123456:25Jg8gtjyCfh61jq@test.w5z7ngz.mongodb.net/?retryWrites=true&w=majority&appName=Test
